--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>online-goods-laravel</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Hinggi.id</title>
+    <meta name="description" content="Hinggi.id" />
+    <meta name="author" content="Hinggi.id" />
 
-    <meta property="og:title" content="online-goods-laravel" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Hinggi.id" />
+    <meta property="og:description" content="Hinggi.id" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
+    <meta name="twitter:site" content="@Hinggi.id" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
